--- a/css/styleres.css
+++ b/css/styleres.css
@@ -1,28 +1,25 @@
-html {
+html, body {
     height: 100%;
     padding:0; 
     margin:0;
 }
-
 body {
     background-image: url(fon.png);
 	background-size: 10%;
 	background-repeat:repeat;
     background-attachment: fixed;
-    margin: 0;
-    padding: 0;
-    height: 100%;
     min-height: 400px;
 }
 #container {
-    background-color: #efd40b;
+    background: #bef2e0;
     max-width: 1100px;
-    height: 100%;
-    min-height: 600px;
+    min-height: 100%;
     width: 100%;
     margin: 0 auto;
+    margin-bottom: -100px;
 }
 header {
+    background-color: #efd40b;
     min-height: 75px;
     margin: auto;
     padding: 0;
@@ -36,14 +33,13 @@ header {
     align-content: center;
     flex-flow: row wrap;
 }
-.floatfigure {
+.icon {
     margin: 0;
 }
 nav {
     margin: 0 auto;
     text-align: center;
     word-spacing: 20px;
-    
 }
 nav a {
     text-decoration: none;
@@ -55,23 +51,17 @@ nav a {
     color: #003365;
 }
 #content  {
-	background: #bef2e0;
-    margin-bottom: 0px;
-/*
-    min-height: -moz-calc(100% - 175px); 
-    min-height: -webkit-calc(100% - 175px);
-    min-height: calc(100%-175px); 
-*/
     min-height: 100%;
-    padding: 0;
     max-width: 1100px;
 }
 table {
     border-spacing: 5px;
+    margin: 30px 50px;
+    padding: 0;
 }
 caption {
     color: #c6790f;
-    font-size: 30px;
+    font-size: 40px;
     font-family: 'Yeseva One', cursive;
     font-style: oblique;
 }
@@ -82,37 +72,45 @@ table, th, td {
 }
 th, td {
     padding: 10px;
+    font-size: 20px;
+    font-family: 'Philosopher', sans-serif;;
 }
 th {
     text-align: left;
 }
-/*
-.text {
-    margin: 0 auto;
-    padding: 0;
-    text-align:justify;
-    color: #c6790f;
-    font-size: 20px;
-    line-height: 35px;
-    font-family: 'Lobster', cursive;
-    font-weight: 50;
-    word-spacing: 8px;
+.before {
+    height: 100px;
 }
-*/
+.list-none {
+    list-style: none;
+}
+table ul {
+    margin: 0;
+    padding-left: 20px;
+    list-style: square;
+}
+
 .foot {
     margin: auto;
     padding: 0;
     max-width: 1100px;
-    height: 100px;
+    position: relative;
+/*    height: 100px;*/
+/*    margin-top: -100px;*/
+    
+/*
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     justify-content: flex-end;
+*/
 }
 footer {
-	padding: 0;
-    margin: 0;
+	margin: auto;
+    max-width: 1100px;
+    position: relative;
+    padding: 0;
     height: 100px;
 	width: 100%;
     background-image: url(footer3.jpg);
