--- a/css/styleres.css
+++ b/css/styleres.css
@@ -36,7 +36,7 @@ header {
 .icon {
     margin: 0;
 }
-nav {
+header nav {
     margin: 0 auto;
     text-align: center;
     word-spacing: 20px;
@@ -54,9 +54,23 @@ nav a {
     min-height: 100%;
     max-width: 1100px;
 }
+.anchor {
+    padding-left: 50px;
+    margin: 15px 0;
+    width: 300px;
+    font-size: 25px;
+    font-family: 'Philosopher', sans-serif;
+    color: #2b0dce;
+}
+.anchor a {
+    text-decoration: none;
+    text-align: center;
+    border-bottom: 1px dotted;
+    border-right: 1px dotted;
+}
 table {
     border-spacing: 5px;
-    margin: 30px 50px;
+    margin: 20px 50px;
     padding: 0;
 }
 caption {
@@ -73,7 +87,7 @@ table, th, td {
 th, td {
     padding: 10px;
     font-size: 20px;
-    font-family: 'Philosopher', sans-serif;;
+    font-family: 'Philosopher', sans-serif;
 }
 th {
     text-align: left;
@@ -95,16 +109,6 @@ table ul {
     padding: 0;
     max-width: 1100px;
     position: relative;
-/*    height: 100px;*/
-/*    margin-top: -100px;*/
-    
-/*
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    justify-content: flex-end;
-*/
 }
 footer {
 	margin: auto;
