--- a/css/styleres.css
+++ b/css/styleres.css
@@ -92,6 +92,15 @@ th, td {
 th {
     text-align: left;
 }
+td a {
+    text-decoration: none;
+    color: #000;
+    font-style: italic;
+}
+td a:hover {
+    color: #c6790f;
+    font-style: oblique;
+}
 .before {
     height: 100px;
 }
